# tts_rack

./: .gitignore  LICENSE  README.md  README_jp.md  pyproject.toml
conf/: config.yaml
conf/corpus/: hifi_captain_female_jp.yaml  hifi_captain_male_jp.yaml  jsut.yaml
conf/dsp/: 24k.yaml  48k.yaml
conf/engine/acoustic/: fastspeech2.yaml
conf/engine/e2e/: ddspeech.yaml  joint.yaml  smallspeech.yaml  vits.yaml
conf/engine/optimizer/: adam_w.yaml
conf/engine/scheduler/: exponential.yaml
conf/engine/vocoder/: apnet.yaml  apnet2.yaml  bigvgan.yaml  diffwave.yaml  freev.yaml  hifi_gan.yaml  istftnet.yaml  sifigan.yaml  univnet.yaml  vocos.yaml  wavegrad.yaml  wavehax.yaml  wavenext.yaml  wtnet2.yaml
conf/metrics/: basic.yaml  none.yaml  perceptual.yaml
conf/text/: ja.yaml  ja_duration.yaml  ja_mas.yaml
docs/: develop.md  evaluate.md  train.md
docs/en/: develop.md  evaluate.md  train.md
src/: calculate_stats.py  evaluate.py  make_utterance_list.py  train.py
src/data/: __init__.py  collate_fn.py  datamodule.py  dataset.py
src/dsp/: __init__.py  processor.py
src/engine/_common/: tensor.py
src/engine/acoustic/: __init__.py  lightning_module.py
src/engine/e2e/: __init__.py  lightning_module.py
src/engine/vocoder/: __init__.py  lightning_module.py
src/interface/: corpus.py  data.py  feature.py  loggable.py  loss.py  preprocess.py  text.py
src/interface/model/: __init__.py  acoustic.py  e2e.py  vocoder.py
src/text/: __init__.py
src/utils/: environment.py  plot.py  tensor.py
src/utterance_list_maker/: __init__.py  hifi_captain.py  jsut.py
(+151 files in other folders)
